--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
                 <article>
                     <header>
 
-                        <h2><a href="https://github.com/Trouble12327/PortfolioProjects/blob/main/Cyclist_project.R">Movie correlation with python<br />
+                        <h2><a href="https://github.com/Trouble12327/PortfolioProjects/blob/main/Movie_correlation_project.ipynb">Movie correlation with python<br />
 										</a></h2>
                     </header>
-                    <a href="https://github.com/Trouble12327/PortfolioProjects/blob/main/Cyclist_project.R" class="image fit"><img src="images/kdrama.jpg" alt="" width="600" height="350" /></a>
+                    <a href="https://github.com/Trouble12327/PortfolioProjects/blob/main/Movie_correlation_project.ipynb" class="image fit"><img src="images/kdrama.jpg" alt="" width="600" height="350" /></a>
                     <p>In this project we look at what variables effect the gross revenue from movies using Python</p>
                     <ul class="actions special">
-                        <li><a href="https://github.com/Trouble12327/PortfolioProjects/blob/main/Cyclist_project.R" class="button">View Project</a></li>
+                        <li><a href="https://github.com/Trouble12327/PortfolioProjects/blob/main/Movie_correlation_project.ipynb" class="button">View Project</a></li>
                     </ul>
                 </article>
 
