--- a/index.html
+++ b/index.html
@@ -118,6 +118,23 @@
                 </article>
 
             </section>
+		 <article>
+                <header>
+
+                    <h2>
+                        <a href="https://public.tableau.com/views/MCUMovieAnalysis/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link">
+                            <center>MCU Movie Analysis<br /> </center>
+                        </a>
+
+                        </a>
+                    </h2>
+                </header>
+                <a href="https://public.tableau.com/views/MCUMovieAnalysis/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/marvel.png" alt="" width="600" height="350" /></a>
+                <p>In this project we look at what is the most popular and other data regarding MCU Film using Tableau Visualization</p>
+                <ul class="actions special">
+                    <li><a href="https://public.tableau.com/views/MCUMovieAnalysis/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View Project</a></li>
+                </ul>
+            </article>
 
             <!-- Footer -->
             <!-- <footer>
